# crypto-market-metadata

./: Cargo.toml  README.md
.github/workflows/: ci.yml
data/: binance.european_option.json  binance.inverse_future.json  binance.inverse_swap.json  binance.linear_future.json  binance.linear_swap.json  binance.spot.json  bitfinex.linear_swap.json  bitfinex.spot.json  bitget.inverse_future.json  bitget.inverse_swap.json  bitget.linear_swap.json  bitget.spot.json  bithumb.spot.json  bitmex.inverse_future.json  bitmex.inverse_swap.json  bitmex.linear_future.json  bitmex.linear_swap.json  bitmex.quanto_future.json  bitmex.quanto_swap.json  bitmex.spot.json  bitstamp.spot.json  bybit.inverse_future.json  bybit.inverse_swap.json  bybit.linear_swap.json  coinbase_pro.spot.json  deribit.european_option.json  deribit.inverse_future.json  deribit.inverse_swap.json  dydx.linear_swap.json  ftx.bvol.json  ftx.linear_future.json  ftx.linear_swap.json  ftx.move.json  ftx.spot.json  gate.inverse_future.json  gate.inverse_swap.json  gate.linear_future.json  gate.linear_swap.json  gate.spot.json  huobi.inverse_future.json  (+33 more)
src/: main.rs
