[package]
name = "crypto-markets-data"
version = "1.0.2"
edition = "2021"
description = "Crawl trading markets from crypto exchanges everyday."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-markets = "1.1.8"
crypto-market-type = "1.0.8"
serde_json = "1.0.79"
